routes.tf
# # Route Table for Public Subnets
# resource "aws_route_table" "public_rt" {
#   vpc_id = aws_vpc.main.id

#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.igw.id
#   }

#   tags = {
#     Name = "public-route-table"
#   }
# }

# resource "aws_route_table" "private_rt" {
#   vpc_id = aws_vpc.main.id

#   route {
#     cidr_block     = "0.0.0.0/0"
#     nat_gateway_id = aws_nat_gateway.main.id
#   }

#   tags = { Name = "private-route-table" }
# }

# resource "aws_route_table_association" "private_1_assoc" {
#   subnet_id      = aws_subnet.private_1.id
#   route_table_id = aws_route_table.private_rt.id
# }

# resource "aws_route_table_association" "private_2_assoc" {
#   subnet_id      = aws_subnet.private_2.id
#   route_table_id = aws_route_table.private_rt.id
# }

# # Associate Public Subnets with Public Route Table
# resource "aws_route_table_association" "public_1_assoc" {
#   subnet_id      = aws_subnet.public_1.id
#   route_table_id = aws_route_table.public_rt.id
# }

# resource "aws_route_table_association" "public_2_assoc" {
#   subnet_id      = aws_subnet.public_2.id
#   route_table_id = aws_route_table.public_rt.id
# }
